webapp/src/containers/WalletPage/WalletPage.module.scss
// App and Bootstrap variables required
@import '~bootstrap/scss/functions';
@import '~bootstrap/scss/variables';
@import '~bootstrap/scss/mixins';
@import '../../scss/variables';
@import '../../scss/bootstrap/variables';

.refreshIcon {
  cursor: pointer;
  color: $secondary;

  &:hover {
    color: $body-color;
  }
}

.searchBar {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  padding: 24px 32px;

  .formGroup {
    position: relative;
    top: 24px;
  }

  input {
    padding-left: 48px;
  }
}

.searchIndicator {
  position: absolute;
  z-index: 3;
  margin: 12px;
  color: $gray-400;
  width: 24px;
  height: 24px;
  right: 5px;
}

.error-dailog {
  color: $dfi-red !important;
}

.searchBar {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  padding: 24px 32px;

  .formGroup {
    position: relative;
    top: 24px;
  }

  input {
    padding-left: 48px;
  }
}

.searchIndicator {
  position: absolute;
  z-index: 3;
  margin: 12px;
  color: $gray-400;
  width: 24px;
  height: 24px;
  right: 5px;
}

.error-dailog {
  color: $dfi-red !important;
}

